#-- bp/CMakeLists.txt -----------------------------------------*- CMake -*-==#
#
#                 Bellport Low Latency Trading Infrastructure.
#
# Copyright MayStreet 2015 - all rights reserved
#
# $Id$
#===----------------------------------------------------------------------====#

add_subdirectory(test)
