#-- bp/test/CMakeLists.txt -------------------------------------*- CMake -*-==#
#
#                 Bellport Low Latency Trading Infrastructure.
#
# Copyright MayStreet 2012 - all rights reserved
#
# $Id$
#===----------------------------------------------------------------------====#

add_subdirectory(test)
