#-- src/bp/test/test/CMakeLists.txt ----------------------------*- CMake -*-==#
#
#                 Bellport Low Latency Trading Infrastructure.
#
# Copyright MayStreet 2012 - all rights reserved
#
# $Id$
#===----------------------------------------------------------------------====#

ADD_EXECUTABLE(bp_test bp_test_proj.cpp test_bp_test.hpp)
 